added small version of pipeline runnable on binder

--- a/nlpeasy_demo_1.ipynb
+++ b/nlpeasy_demo_1.ipynb
@@ -19,7 +19,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Installation"
+    "For the workshop you have 2 possibilities to participate:\n",
+    "- **mybinder.org:** No setup needed, only a webbrowser, however only 1-2 GB RAM are available\n",
+    "- **own laptop:** You need to install the python environment and either Docker or Elasticsearch+Kibana"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is why we have to variants of the executen, a small one for binder and a bigger one to use on your laptop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "DOIT_SMALL = 'BINDER_PORT' in os.environ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can overwrite the BINDER-setting if you need to or want to trye"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DOIT_SMALL = True\n",
+    "\"DOIT_SMALL: {}\".format(DOIT_SMALL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if DOIT_SMALL:\n",
+    "    nrows_to_load, spacy_model, spacy_cols = 1000, 'en_core_web_sm', ['essay0']\n",
+    "else:\n",
+    "    nrows_to_load, spacy_model, spacy_cols = None, 'en_core_web_md', None\n",
+    "\"nrows_to_load: {} spacy_model: {} spacy_cols: {}\".format(nrows_to_load, spacy_model, spacy_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can later get the full processed data for analysis if you download (1.3GB)\n",
+    "> <https://github.com/d-one/NLPeasy-workshop/releases/download/v0.1/okc_enriched.zip>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mybinder.org\n",
+    "\n",
+    "Online version so now installation needed on your laptop - might even work on a laptop ;-)\n",
+    "\n",
+    "> <https://mybinder.org/v2/gh/d-one/NLPeasy-workshop/master?urlpath=lab> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/d-one/NLPeasy-workshop/master?urlpath=lab)\n",
+    "\n",
+    "> With prepared-data: <https://mybinder.org/v2/gh/d-one/NLPeasy-workshop/elastic?urlpath=lab> [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/d-one/NLPeasy-workshop/elastic?urlpath=lab)\n",
+    "\n",
+    "However, there is only 1-2 GB of RAM available, which is tough for our example. Also if you loose your connection or close your laptop for 10 minutes your session is lost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installation on your own Laptop"
    ]
   },
   {
@@ -41,17 +120,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ideally before the workshop, on the terminal or inside this notebook issue:"
+    "Ideally before the workshop, on the terminal or inside this notebook issue in the terminal:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip install nlpeasy scikit-learn matplotlib\n",
-    "!python -m spacy download en_core_web_md"
+    "git clone https://github.com/d-one/nlpeasy-workshop\n",
+    "cd nlpeasy-workshop\n",
+    "python -m venv venv\n",
+    "source venv/bin/activate\n",
+    "pip install -r requirements.txt\n",
+    "python -m spacy download en_core_web_md"
    ]
   },
   {
@@ -83,20 +164,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import nlpeasy as ne"
+    "import numpy as np\n",
+    "import nlpeasy as ne\n",
+    "import util"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "`util` is part of the workshop repository and helps with accessing the Kibana dashboard on binder."
    ]
   },
   {
@@ -121,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "elk = ne.connect_elastic(elk_version='7.5.0',\n",
+    "elk = ne.connect_elastic(elk_version='7.5.2',\n",
     "                         mount_volume_prefix='./elastic-data-all/')"
    ]
   },
@@ -133,6 +210,23 @@
     "BTW, this function is not blocking, i.e. the servers might only be active couple of seconds later.\n",
     "Setting mountVolumePrefix=\"./elastic-data/\" would keep the data of elastic in your\n",
     "filesystems and then the data survives container restarts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On binder you do not have access to it's localhost. However set up some binder-jupyter magic so you can access it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if util.BINDER:\n",
+    "   util.display_kibana_link()"
    ]
   },
   {
@@ -156,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "okc = pd.read_csv('https://github.com/rudeboybert/JSE_OkCupid/raw/master/profiles.csv.zip')\n",
+    "okc = pd.read_csv('https://github.com/rudeboybert/JSE_OkCupid/raw/master/profiles.csv.zip', nrows=nrows_to_load)\n",
     "okc.head()"
    ]
   },
@@ -320,10 +414,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "okc['pets'].fillna('', inplace=True)\n",
     "okc['likes_dogs'] = 0\n",
     "okc.loc[okc['pets'].str.contains('likes dogs'), 'likes_dogs'] = 1\n",
     "okc.loc[okc['pets'].str.contains('has dogs'), 'likes_dogs'] = 1\n",
-    "    \n",
+    "\n",
     "okc['likes_cats'] = 0\n",
     "okc.loc[okc['pets'].str.contains('likes cats'), 'likes_cats'] = 1\n",
     "okc.loc[okc['pets'].str.contains('has cats'), 'likes_cats'] = 1"
@@ -474,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parameters here have some meening:\n",
+    "The parameters here mean the following:\n",
     "* `index` will be the name of the Elasticsearch index (something like a Database name).\n",
     "* `textCols` here you can specify which columns of the dataframe are textual.\n",
     "* `numCols` will be used for histograms in Kibana.\n",
@@ -487,30 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's add stages in the pipeline - the spacy model takes ~30 secs to load.\n",
-    "Here, we do Sentiment analysis and Spacy Enrichment:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipeline += ne.VaderSentiment(['all_free_text'] , 'sentiment')\n",
-    "pipeline += ne.VaderSentiment(['essay0'], 'sentiment_summary')\n",
-    "pipeline += ne.VaderSentiment(['essay1'], 'sentiment_life')\n",
-    "pipeline += ne.VaderSentiment(['essay2'], 'sentiment_goodat')\n",
-    "pipeline += ne.VaderSentiment(['essay3'], 'sentiment_noticeabout')\n",
-    "pipeline += ne.VaderSentiment(['essay4'], 'sentiment_favorites')\n",
-    "pipeline += ne.VaderSentiment(['essay5'], 'sentiment_6things')\n",
-    "pipeline += ne.VaderSentiment(['essay6'], 'sentiment_thinkingabout')\n",
-    "pipeline += ne.VaderSentiment(['essay7'], 'sentiment_Fridaynight')\n",
-    "pipeline += ne.VaderSentiment(['essay8'], 'sentiment_privatething')\n",
-    "pipeline += ne.VaderSentiment(['essay9'], 'sentiment_messageme')\n",
-    "pipeline += ne.SpacyEnrichment(nlp='en_core_web_md',\n",
-    "                               cols=['all_free_text', 'essay0', 'essay1', 'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8', 'essay9'],\n",
-    "                               vec=True)"
+    "Now let's add stages in the pipeline!"
    ]
   },
   {
@@ -519,9 +591,79 @@
    "source": [
     "NLPeasy pipelines can have as few or as many stages as you wish. Here we just use the following:\n",
     "* `VaderSentiment` is a nice rule-based sentiment prediction for english.\n",
-    "* `Spacy` uses the `spacy` package together with it's language model - here the english medium (=md). We use it for a couple of enrichments, as you will see below. Please try to add your own ones! Here we activated `vec=True` (default is `False`) in order to use the Spacy-WordEmbeddings later for clustering.\n",
+    "* `Spacy` uses the `spacy` package together with it's language model - here english small (=sm) or medium (=md).\n",
+    "    We use it for a couple of enrichments, as you will see below.\n",
     "\n",
     "There are more stages in NLPeasy you can use (e.g. RegexTag Extraction, Splitting) or you can define your own functions there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First the pipeline should calculate sentiments to all of the text columns. The first parameter specifies for which column, the second one stipulates the name of the output column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline += ne.VaderSentiment('all_free_text' , 'sentiment')\n",
+    "pipeline += ne.VaderSentiment('essay0', 'sentiment_summary')\n",
+    "pipeline += ne.VaderSentiment('essay1', 'sentiment_life')\n",
+    "pipeline += ne.VaderSentiment('essay2', 'sentiment_goodat')\n",
+    "pipeline += ne.VaderSentiment('essay3', 'sentiment_noticeabout')\n",
+    "pipeline += ne.VaderSentiment('essay4', 'sentiment_favorites')\n",
+    "pipeline += ne.VaderSentiment('essay5', 'sentiment_6things')\n",
+    "pipeline += ne.VaderSentiment('essay6', 'sentiment_thinkingabout')\n",
+    "pipeline += ne.VaderSentiment('essay7', 'sentiment_Fridaynight')\n",
+    "pipeline += ne.VaderSentiment('essay8', 'sentiment_privatething')\n",
+    "pipeline += ne.VaderSentiment('essay9', 'sentiment_messageme')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will add NLPeasy's spaCy enrichemnt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For small environments (like on binder) do it just for one column. Also we then only use the small model which does not provide vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spacy_cols = spacy_cols or ['all_free_text', 'essay0', 'essay1', 'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8', 'essay9']\n",
+    "use_spacy_vecs = not spacy_model.endswith('_sm')\n",
+    "\"spacy_model={} use_spacy_vecs={} spacy_cols={}\".format(spacy_model, use_spacy_vecs,spacy_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The spacy model takes ~30 secs to load:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline += ne.SpacyEnrichment(nlp=spacy_model,\n",
+    "                               cols=spacy_cols,\n",
+    "                               vec=use_spacy_vecs)"
    ]
   },
   {
@@ -544,7 +686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "okc_enriched = pipeline.process(okc[range(0,1000),:], write_elastic=True)"
+    "okc_enriched = pipeline.process(okc.head(1000), write_elastic=True, batchsize=20)"
    ]
   },
   {
@@ -576,7 +718,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kib= elk.show_kibana(how=[\"jupyter\",\"print\",\"webbrowser\"])"
+    "util.display_kibana_link() if util.BINDER else elk.kibana"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oh, and you wonder what took so long in the upload?"
    ]
   },
   {
@@ -586,20 +735,6 @@
    "outputs": [],
    "source": [
     "pipeline._tictoc.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It should look like the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Kibana Screenshot](demo_kibana.png)"
    ]
   },
   {
@@ -623,7 +758,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "filename = '{}_okc_enriched'.format(datetime.datetime.now())\n",
+    "filename = '{}_okc_enriched.pickle'.format(datetime.datetime.now())\n",
     "okc_enriched.to_pickle(filename)"
    ]
   },
@@ -672,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
