changes for SDS workshop updated to use jupyter-server-proxy

--- a/nlpeasy_demo_2.ipynb
+++ b/nlpeasy_demo_2.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLPeasy Demo - OKCupid (2 / 2)\n",
-    "# Applied Machine Learning Days, Lausanne - 25 January 2020"
+    "# NLPeasy Workshop - OKCupid (2/2)\n",
+    "# SDS 2020, 25th of June 2020"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "okc_enriched = pd.read_pickle('okc_enriched_demo')"
+    "okc_enriched = pd.read_pickle('okc_enriched_demo.pickle')"
    ]
   },
   {
@@ -7783,7 +7783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
