Removed SDS title

--- a/nlpeasy_demo_1.ipynb
+++ b/nlpeasy_demo_1.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLPeasy Workshop - OKCupid (1/2)\n",
-    "# SDS 2020, 25th of June 2020"
+    "# NLPeasy Workshop - OKCupid (1/2)"
    ]
   },
   {
@@ -2350,7 +2349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
