--- a/nlpeasy_demo_2.ipynb
+++ b/nlpeasy_demo_2.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLPeasy Workshop - OKCupid (2/2)\n",
-    "# SDS 2020, 25th of June 2020"
+    "# NLPeasy Workshop - OKCupid (2/2)"
    ]
   },
   {
@@ -29153,7 +29152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
