making demo 2 run in mybinder.org 2GB RAM

--- a/nlpeasy_demo_2.ipynb
+++ b/nlpeasy_demo_2.ipynb
@@ -45,6 +45,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Also if you are on MyBinder you need to shutdown "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./stop_elk.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We have prepared the full enriched data set for you, you can load it now:"
    ]
   },
@@ -23530,7 +23546,7 @@
     }
    ],
    "source": [
-    "okc_enriched['myself_summary_vec_normalized'].apply(pd.Series)"
+    "okc_enriched['myself_summary_vec_normalized'].head().apply(pd.Series)"
    ]
   },
   {
@@ -29152,7 +29168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
